@@ -4,6 +4,10 @@ Changelog
 2.7 (unreleased)
 ----------------
 
+- Added a disable_increment_profile_vernum tagged value.
+  If it is True, version number in metadata.xml is not upgraded at each generation.
+  [thomasdesvenain]
+
 - Add icons metadata files.
   [thomasdesvenain]
 
